--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -40,6 +40,10 @@
   background: #FF8A80;
   border-color: #FF5252;
 }
+.navbar-btn {
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
 .media-object{
   max-height: 80px;
@@ -83,6 +87,8 @@
 }
 .navbar-default .navbar-nav li a{
   color: #FFFFFF;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 .navbar-default .navbar-nav li a:hover{
   background: #B2EBF2;
